--- a/PubSub.Client/PubSub.Client.csproj
+++ b/PubSub.Client/PubSub.Client.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PubSub.Shared\PubSub.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
