--- a/PubSub.Server/PubSub.Server.csproj
+++ b/PubSub.Server/PubSub.Server.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PubSub.Shared\PubSub.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
