[Features] Added client implementation and the console programs examples

--- a/PubSub.Tests/PubSub.Tests.csproj
+++ b/PubSub.Tests/PubSub.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PubSub.Client\PubSub.Client.csproj" />
     <ProjectReference Include="..\PubSub.Server\PubSub.Server.csproj" />
     <ProjectReference Include="..\PubSub.Shared\PubSub.Shared.csproj" />
   </ItemGroup>
